# arc-firefox-theme

./: Makefile.am  README.md  configure.ac
arc-firefox-theme/chrome/browser/addons/: .directory
arc-firefox-theme/chrome/browser/custom_images/dark/tabs/: .directory  tab-start-hover.svg~
arc-firefox-theme/chrome/browser/custom_images/dark/window-controls/: .directory
arc-firefox-theme/chrome/browser/customizableui/: .directory
arc-firefox-theme/chrome/browser/fxa/: .directory
arc-firefox-theme/chrome/browser/privatebrowsing/: .directory
arc-firefox-theme/chrome/browser/sass/: browser-dark.css
arc-firefox-theme/chrome/global/icons/: .directory
m4/: rsm-enable.m4
rsm-firefox-theme/: chrome.manifest  install.rdf
rsm-firefox-theme/chrome/browser/: .directory
rsm-firefox-theme/chrome/browser/controlcenter/: .directory
rsm-firefox-theme/chrome/browser/custom_images/: .directory
rsm-firefox-theme/chrome/browser/custom_images/dark/: .directory
rsm-firefox-theme/chrome/browser/custom_images/dark/tabs/: tab-end.svg~  tab-start.svg~
rsm-firefox-theme/chrome/browser/custom_images/darker/tabs/: .directory
rsm-firefox-theme/chrome/browser/custom_images/light/tabs/: .directory
rsm-firefox-theme/chrome/browser/tabbrowser/: .directory
rsm-firefox-theme/chrome/browser/usercontext/: .directory
rsm-firefox-theme/chrome/mozapps/downloads/: .directory
rsm-firefox-theme/chrome/mozapps/extensions/: .directory
